# restate-pyannote-audio

./: .env.dist  Dockerfile  README.md  devenv.nix  devenv.yaml  justfile  pyproject.toml
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml  release.yaml
src/: main.py
src/restate_pyannote_audio/: __init__.py  executor.py  pipeline.py  restate.py
